kubernetes/apps/homebridge/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homebridge
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
