kubernetes/apps/homebridge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  namespace: homebridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: homebridge
          image: ghcr.io/homebridge/homebridge:latest
          ports:
            - containerPort: 8581
          startupProbe:
            httpGet:
              path: /
              port: 8581
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: 8581
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 8581
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: 100m
              memory: 1024Mi
            limits:
              memory: 2048Mi
          volumeMounts:
            - name: config
              mountPath: /homebridge
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homebridge-config
