kubernetes/apps/homebridge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
spec:
  type: ClusterIP
  selector:
    app: homebridge
  ports:
    - port: 8581
      targetPort: 8581
