kubernetes/apps/homebridge/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge
  namespace: homebridge
spec:
  ingressClassName: traefik
  rules:
    - host: homebridge.homelab.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebridge
                port:
                  number: 8581
